transaction/xa/k8s/account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account-xa
    version: v1
  name: account-xa-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-xa
  template:
    metadata:
      labels:
        app: account-xa
        version: v1
    spec:
      containers:
        - image: registry.cn-shenzhen.aliyuncs.com/solarmesh/demo-nacos:v1
          args:
            - java
            - -jar
            - account-xa-0.0.1-SNAPSHOT.jar
          imagePullPolicy: Always
          name: account-xa
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: account-xa
  name: account-xa
spec:
  ports:
    - name: http
      port: 8083
      protocol: TCP
      targetPort: 8083
#  selector:
#    app: account-xa
  sessionAffinity: None
  type: ClusterIP
  externalName: account-xa

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    app: account-xa
  name: account-xa
  namespace: xa
spec:
  addresses:
    - 172.20.0.44
    - 172.20.0.47
  endpoints:
    - address: 172.20.0.44
      labels:
        version: v1
        app: account-xa
    - address: 172.20.0.47
      labels:
        version: v2
        app: account-xa
  hosts:
    - account-xa
  location: MESH_EXTERNAL
  ports:
    - name: http-8083
      number: 8083
      protocol: TCP
  resolution: STATIC
#  workloadSelector:
#    labels:
#      app: account-xa


---


apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account-xa
    version: v2
  name: account-xa-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-xa
  template:
    metadata:
      labels:
        app: account-xa
        version: v2
    spec:
      containers:
        - image: registry.cn-shenzhen.aliyuncs.com/solarmesh/demo-nacos:v1
          args:
            - java
            - -jar
            - account-xa-0.0.1-SNAPSHOT.jar
          imagePullPolicy: Always
          name: account-xa
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-xa
spec:
  host: account-xa
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-xa
spec:
  hosts:
    - account-xa
  http:
    - route:
        - destination:
            host: account-xa
            subset: v1
          weight: 90
        - destination:
            host: account-xa
            subset: v2
          weight: 10
