transaction/xa/k8s/nacos.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    app: nacos
  name: nacos
  namespace: xa
spec:
  addresses:
    - 10.10.13.110
  hosts:
    - nacos
  location: MESH_EXTERNAL
  endpoints:
    - address: 192.168.110.185
      ports:
        http-8849: 8080
  ports:
    - name: http-8849
      number: 8849
      protocol: TCP
  resolution: STATIC

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: xa
spec:
  addresses:
    - 10.10.13.110
  hosts:
    - mysql
  location: MESH_EXTERNAL
  endpoints:
    - address: 10.10.13.110
      labels:
        app: mysql
  ports:
    - name: mysql-3306
      number: 3306
      protocol: TCP
  resolution: STATIC
